# llama2.c

./: pyproject.toml  run
